// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`translation directive > script-setup-alias > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.translation || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.translation("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > script-setup-global-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > script-setup-local-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("count", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > script-setup-no-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > script-setup-no-use > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString(_ctx.$t("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString($setup.count),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > script-setup-obj > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.i18n.t || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.i18n.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-alias > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.translation || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.translation("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-global-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-local-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("count", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-no-option > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.t || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.t("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-no-use > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString(_ctx.$t("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString($setup.count),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-return-alias > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.translation || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.translation("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;

exports[`translation directive > setup-return-alias-with-obj > vite 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(
    Fragment,
    null,
    [
      createBaseVNode(
        "h1",
        null,
        toDisplayString$1(($setup.translation || _ctx.$t)("hello", {}, {})),
        1
        /* TEXT */
      ),
      createBaseVNode(
        "p",
        null,
        toDisplayString$1($setup.count) + " " + toDisplayString$1($setup.translation("hello")),
        1
        /* TEXT */
      )
    ],
    64
    /* STABLE_FRAGMENT */
  );
}"
`;
